Add handler to list board lists
