# docs/swagger.json
@@ -237,6 +237,44 @@
             }
         },
         "/boards/{board_id}/lists": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "tags": [
+                    "lists"
+                ],
+                "summary": "List board lists",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Board ID",
+                        "name": "board_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/lists.ListListsResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apierrors.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -252,7 +290,7 @@
                 "tags": [
                     "lists"
                 ],
-                "summary": "Create a list",
+                "summary": "Create a board list",
                 "parameters": [
                     {
                         "type": "string",
@@ -611,6 +649,17 @@
                 "position": {
                     "type": "integer",
                     "minimum": 0
+                }
+            }
+        },
+        "lists.ListListsResponse": {
+            "type": "object",
+            "properties": {
+                "lists": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/lists.ListResponse"
+                    }
                 }
             }
         },
