# internal/module/lists/handler.go
@@ -15,7 +15,7 @@ func newHandler(service Service) *handler {
 }
 
 // Create godoc
-// @Summary      Create a list
+// @Summary      Create a board list
 // @Tags         lists
 // @Accept       json
 // @Produce      json
@@ -27,7 +27,7 @@ func newHandler(service Service) *handler {
 // @Failure      422   		 {object}  apierrors.ErrorResponse
 // @Security     BearerAuth
 // @Router       /boards/{board_id}/lists [post]
-func (h *handler) CreateList(ctx fiber.Ctx) error {
+func (h *handler) Create(ctx fiber.Ctx) error {
 	var req CreateListRequest
 
 	if err := ctx.Bind().Body(&req); err != nil {
@@ -54,4 +54,33 @@ func (h *handler) CreateList(ctx fiber.Ctx) error {
 	}
 
 	return ctx.Status(fiber.StatusCreated).JSON(resp)
+}
+
+// List godoc
+// @Summary      List board lists
+// @Tags         lists
+// @Produce      json
+// @Param        board_id  path      string  true  "Board ID"
+// @Produce      json
+// @Success      200  {object}  ListListsResponse
+// @Failure      401  {object}  apierrors.ErrorResponse
+// @Security     BearerAuth
+// @Router       /boards/{board_id}/lists [get]
+func (h *handler) List(ctx fiber.Ctx) error {
+	userID, ok := ctx.Locals("user_id").(string)
+	if !ok || userID == "" {
+		return apierrors.Unauthorized("missing user identity")
+	}
+
+	boardID := ctx.Params("board_id")
+	if boardID == "" {
+		return apierrors.BadRequest("missing board id")
+	}
+
+	resp, err := h.service.ListLists(boardID, userID)
+	if err != nil {
+		return err
+	}
+
+	return ctx.Status(fiber.StatusOK).JSON(resp)
 }
